# predictability-score

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: api_reference.md  architecture.md  getting_started.md  scoring_methodology.md
examples/: gold_ohlc_example.ipynb
predictability_score/: __init__.py  config.py  core.py  null_significance.py  result.py  stability.py  stationarity.py  temporal.py  utils.py
predictability_score/forecast/: base.py  tensorflow_backend.py
tests/: conftest.py  test_core.py  test_forecast_backend.py  test_null_significance.py  test_stability.py  test_stationarity.py  test_temporal.py
