[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictability-score"
version = "0.1.0"
description = "Framework for measuring time series predictability."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name = "Jalal" }
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "statsmodels>=0.14",
    "scikit-learn>=1.2"
]

[tool.setuptools.packages.find]
where = ["."]